--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Tue, 31 May 2022 13:42:06 GMT
+ * Generated on Sat, 03 Jun 2023 00:45:31 GMT
  */
 
 :root {
@@ -24,11 +24,18 @@
   --color-gray-800: #373737;
   --color-gray-900: #262626;
   --color-gray-1000: #191919;
-  --color-purple: #a239ca;
-  --color-blue: #4717f6;
-  --color-green: #34a29e;
-  --color-red: #ff533d;
-  --color-yellow: #e5e338;
+  --color-pp-dark: #34373e;
+  --color-pp-navy: #0c296a;
+  --color-pp-dark-purple: #4541c9;
+  --color-pp-magenta: #ec008c;
+  --color-pp-text-gray: #7c7373;
+  --color-pp-gray-3: #bbb5ad;
+  --color-pp-gray-2: #d3cdc3;
+  --color-pp-gray-1: #e8e5e1;
+  --color-pp-light-navy: #6c7da2;
+  --color-pp-light-purple: #d1c7ef;
+  --color-pp-peach: #f4cdb3;
+  --color-pp-tan: #f2e6d4;
   --12px: 0.75rem;
   --14px: 0.875rem;
   --16px: 1rem;
