--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -36,6 +36,8 @@
 	--color-input-fg: var(--color-gray-900);
 	--color-placeholder: var(--color-gray-500);
 
+	--upper-bg: #f9f7f4;
+
 	/* "1" second duration */
 	--1s: 1ms;
 }
