--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -25,7 +25,7 @@
 	--color-fg: var(--color-gray-900);
 	--color-primary: var(--color-black);
 	--color-link: var(--color-black);
-	--color-focus: var(--color-pp-magenta);
+	--color-focus: var(--color-pp-dark-purple);
 	--color-mark: var(--color-pp-magenta);
 	--color-selection: var(--color-gray-300);
 	--color-border: var(--color-gray-300);
