--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -27,3 +27,42 @@
 	font-stretch: normal;
 	font-display: swap;
 }
+
+@font-face {
+	font-family: "Tiempos Text Regular";
+	src: url("https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Regular.woff2")
+		format("woff2");
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Tiempos Text Bold";
+	src: url("https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Bold.woff2")
+		format("woff2");
+	font-weight: 700;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "National Regular";
+	src: url("https://pudding.cool/assets/fonts/national/National2Web-Regular.woff2")
+		format("woff2");
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
+}
+@font-face {
+	font-family: "National Bold";
+	src: url("https://pudding.cool/assets/fonts/national/National2Web-Bold.woff2")
+		format("woff2");
+	font-weight: 700;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
+}
