--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,10 +6,10 @@
 /* colors defined in variables.css */
 :root {
 	/* font */
-	--sans: "National Regular", Avenir Next, -apple-system, BlinkMacSystemFont,
-		Helvetica, Arial, sans-serif;
-	--serif: "Tiempos Text Web", Iowan Old Style, Times New Roman, Times, serif;
-	--mono: "Avenir Next Regular", Menlo, Consolas, Monaco, monospace;
+	--sans: "National", Avenir Next, -apple-system, BlinkMacSystemFont, Helvetica,
+		Arial, sans-serif;
+	--serif: "Tiempos Text", Iowan Old Style, Times New Roman, Times, serif;
+	--mono: "Avenir Next", Menlo, Consolas, Monaco, monospace;
 
 	/* z-index */
 	--z-bottom: -100;
@@ -24,7 +24,7 @@
 	--color-bg: #fffdf8;
 	--color-fg: #1c1246;
 	--color-primary: var(--color-black);
-	--color-link: var(--color-black);
+	--color-link: var(--color-dark-tan);
 	--color-focus: var(--color-purple);
 	--color-mark: var(--color-purple);
 	--color-selection: var(--color-gray-300);
@@ -51,6 +51,10 @@
 
 strong {
 	font-family: var(--font-bold);
+}
+
+a {
+	font-weight: bold;
 }
 
 /* dark theme */
