intro animation, a start

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,7 +8,7 @@
 	/* font */
 	--sans: "National", Avenir Next, -apple-system, BlinkMacSystemFont, Helvetica,
 		Arial, sans-serif;
-	--serif: "Tiempos Text", Iowan Old Style, Times New Roman, Times, serif;
+	--serif: "Tiempos Headline", Iowan Old Style, Times New Roman, Times, serif;
 	--mono: "Avenir Next", Menlo, Consolas, Monaco, monospace;
 
 	/* z-index */
