--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -49,6 +49,16 @@
 }
 
 @font-face {
+	font-family: "Tiempos Headline";
+	src: url("https://pudding.cool/assets/fonts/tiempos/TiemposHeadlineWeb-Regular.woff2")
+		format("woff2");
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
+}
+
+@font-face {
 	font-family: "National";
 	src: url("https://pudding.cool/assets/fonts/national/National2Web-Regular.woff2")
 		format("woff2");
