--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,9 +6,9 @@
 /* colors defined in variables.css */
 :root {
 	/* font */
-	--sans: "National", Avenir Next, -apple-system, BlinkMacSystemFont, Helvetica,
+	--sans: "National", -apple-system, BlinkMacSystemFont, Helvetica,
 		Arial, sans-serif;
-	--serif: "Tiempos Headline", Iowan Old Style, Times New Roman, Times, serif;
+	--serif: "Canela", Iowan Old Style, Times New Roman, Times, serif;
 	--mono: "Avenir Next", Menlo, Consolas, Monaco, monospace;
 
 	/* z-index */
