start of a hack for the opening line

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -38,7 +38,8 @@
 
 	/* colors */
 	--color-tan: #e7e2d4;
-	--color-dark-tan: #b0a380;
+	--color-dark-tan: #817451;
+	--color-medium-tan: #b0a380;
 	--color-accent-orange: #f96501;
 	--color-accent-purple: #6b50dc;
 
